--- a/src/app/sections/student-opinion/student-opinion.component.css
+++ b/src/app/sections/student-opinion/student-opinion.component.css
@@ -3,7 +3,7 @@
   padding: 20px;
 }
 .text-content h1 {
-  font-size: 36px;
+  /* font-size: 36px; */
   font-weight: 700;
   font-family: "Cairo";
 
@@ -12,13 +12,14 @@
   color: rgba(63, 100, 171, 1);
 }
 .text-content p {
-  width: 60%;
+
   margin-top: 32px;
   font-size: 20px;
   font-weight: 500;
   color:rgba(138, 138, 138, 1);
 
 }
+
 
 ul {
   display: flex;
