--- a/src/app/sections/top-rated/top-rated.component.css
+++ b/src/app/sections/top-rated/top-rated.component.css
@@ -12,7 +12,7 @@
   font-size: 18px;
   color:rgba(0, 0, 0, 0.75);
   /* margin: 12px; */
-  width: 503px;
+  /* width: 503px; */
   margin: auto;
 }
 .row {
