--- a/src/app/sections/top-rated/top-rated.component.html
+++ b/src/app/sections/top-rated/top-rated.component.html
@@ -1,6 +1,6 @@
 <div class="top-rated">
   <div class="section-title">
-    <h2>  مدربينا المميزين</h2>
+    <h2 class="mt-3">  مدربينا المميزين</h2>
     <img src="assets/images/top-rated(1).png" alt="">
     <p>يوجد لدينا نخبة من الأساتذة والمدربين الذين لديهم الكثير نت الخبرة
       في كل مجال من مجالاتهم</p>
