--- a/src/app/pages/team/team.component.html
+++ b/src/app/pages/team/team.component.html
@@ -6,7 +6,7 @@
         <div class="card border-0" >
           <div class="card-body text-center">
             <img class="w-100" src="assets/images/team.png"  alt="...">
-            <h5  class="card-title mt-3">عبدالرحمن أحمد حمد </h5>
+            <h5  class="card-title mt-3" (click)="mylog()">عبدالرحمن أحمد حمد </h5>
             <p class="job"> رئيس مجلس الإدارة</p>
 
 
