--- a/src/app/pages/articles-page/articles-page.component.html
+++ b/src/app/pages/articles-page/articles-page.component.html
@@ -11,6 +11,7 @@
 
     <div class="row gy-2 ">
       <div class="col-lg-4 col-md-6 col-sm-12">
+       <a routerLink="/articles-perview">
         <div class="card" >
           <div class="card-body">
             <img class="w-100" src="assets/images/Rectangle 21922.png"  alt="...">
@@ -21,6 +22,7 @@
 
           </div>
         </div>
+       </a>
       </div>
       <div class="col-lg-4 col-md-6 col-sm-12">
         <div class="card" >
@@ -37,8 +39,8 @@
         </div>
       </div>
       <div class="col-lg-4 col-md-6 col-sm-12">
-        <div class="card">
-          <div class="card-body">
+        <div class="card" >
+          <div class="card-body" routerLink="articles-perview">
             <img src="assets/images/Rectangle 21922.png" class="card-img-top" alt="...">
             <div class="clock"> <i class="fa-regular fa-clock"></i>  <span>منذ ساعة </span></div>
             <h2 class="card-title">هناك حقيقة مثبتة منذ زمن طويل وهي أن المحتوى المقروء</h2>
