--- a/src/app/sections/articles/articles.component.css
+++ b/src/app/sections/articles/articles.component.css
@@ -73,3 +73,13 @@ padding: 0 0 0 10px;
 
 
  }
+ .image-container {
+  width: 100%;
+  height: 50%;
+ }
+ .image-container img {
+  border-radius: 10px;
+  width: 400px;
+  height: 300px;
+ }
+
