--- a/src/app/sections/navbar/navbar.component.html
+++ b/src/app/sections/navbar/navbar.component.html
@@ -18,13 +18,13 @@
                   <a class="nav-link" href="#lines">المسارات التدريبية</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link"routerLink="/trainers">المدربين </a>
+                  <a class="nav-link" href="#top-trainer" >المدربين </a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" href="#student-op ">اراء المدربين </a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" routerLink="/articles" >المقالات </a>
+                  <a class="nav-link"  href="#articles-section">المقالات </a>
               </li>
               <li class="nav-item">
                   <a class="nav-link" routerLink="/joinUs">اتصل بنا </a>
