--- a/src/app/sections/articles/articles.component.html
+++ b/src/app/sections/articles/articles.component.html
@@ -1,26 +1,30 @@
-<div class="articles">
+<div class="articles" id="articles-section ">
   <div class="container">
   <h1 class="article-header">أحدث المقالات</h1>
 
     <div class="row">
-      <div class="col-lg-4 col-md-6 col-sm-12" *ngFor="let item of NewsData"  >
-        <div class="card" >
-          <div class="card-body">
-            <div class="image-container">
-              <img class="img-fluid" [src]="item.image"  alt="...">
-            </div>
-            <div class="clock">  <i class="fa-regular fa-clock"></i> <span>{{item.date}} </span></div>
-            <h2 class="card-title">{{item.title}}</h2>
-            <p class="card-text"> {{item.description}}</p>
-            <div class="readMore">قراءة المزيد..</div>
 
+      <div class="col-lg-4 col-md-6 col-sm-12" *ngFor="let item of NewsData"  >
+        <a [routerLink]="['/articles-perview',item.nid]" >
+          <div class="card" >
+            <div class="card-body">
+              <div class="image-container">
+                <img class="img-fluid" [src]="item.image"  alt="...">
+              </div>
+              <div class="clock">  <i class="fa-regular fa-clock"></i> <span>{{item.date}} </span></div>
+              <h2 class="card-title">{{item.title}}</h2>
+              <p class="card-text"> {{item.description}}</p>
+              <div class="readMore">قراءة المزيد..</div>
+
+            </div>
           </div>
-        </div>
+        </a>
+
       </div>
 
 
 
-      <button class="displyMore" type="button" routerLink="articles">عرض المزيد</button>
+      <button class="displyMore" type="button" [routerLink]="['/articles']">عرض المزيد</button>
 
 
     </div>
