--- a/src/app/sections/top-rated/top-rated.component.html
+++ b/src/app/sections/top-rated/top-rated.component.html
@@ -1,4 +1,4 @@
-<div class="top-rated">
+<div class="top-rated"  id="top-trainer">
   <div class="section-title">
     <h2 class="mt-3">  مدربينا المميزين</h2>
     <img src="assets/images/top-rated(1).png" alt="">
